add new functions

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4956,7 +4956,7 @@ a.badge:focus {
   margin-left: 3px;
 }
 .jumbotron {
-  font-family: 'Monoton', cursive;
+  font-family: 'Fredericka the Great', cursive;
   padding-top: 30px;
   padding-bottom: 30px;
   margin-bottom: 30px;
@@ -4966,6 +4966,7 @@ a.badge:focus {
 .jumbotron h1,
 .jumbotron .h1 {
   color: inherit;
+  font-size: 120px:
 }
 .jumbotron p {
   margin-bottom: 15px;
@@ -5818,6 +5819,8 @@ button.list-group-item-danger.active:focus {
   padding-bottom: 75%;
 }
 .well {
+  font-family: 'Eater', cursive;
+
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
