add the background image

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
 h1{
     font-size: 300 px;
 }
+body{
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfywUtc2p_em2JJvXfVsgh4AJ3TBg69eP-5CyiCKe_Y-XLJ2iF)
+    
+}
