--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5483,6 +5483,7 @@ button.list-group-item-danger.active:focus {
   color: inherit;
 }
 .panel-footer {
+  font-family: 'Eater', cursive;
   padding: 10px 15px;
   background-color: #f5f5f5;
   border-top: 1px solid #ddd;
